Fix: Remove Extra Padding and Extra Scrollbar for ec-holder , Added Border bottom to ec-title and fixed Border in resources

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     grid-template-rows: 2.2rem 4rem 1fr;
     background: var(--bg-main);
     height: 100%;
-    column-gap: 1rem;
+
 }
 
 .tab-container {
@@ -239,7 +239,7 @@ select:focus>option:hover {
 .ec-holder {
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .ec-container {
@@ -261,13 +261,16 @@ select:focus>option:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0;
+    gap: 0.5rem;
     font-size: 1.4rem;
     color: var(--text-dark) !important;
+    margin: 0 !important;
+    box-sizing: border-box !important;
+    border-bottom: 3px solid var(--border-color) !important;
 }
 
 .search-container {
-    width: 75% !important;
+    width: 67% !important;
     display: flex;
     gap: 0.5rem;
     padding: 0.5rem 0 0.5rem 0.5rem;
@@ -296,6 +299,11 @@ select:focus>option:hover {
 
 
 /***** Resource Styling *****/
+
+.ec-timeline .ec-sidebar .ec-resource span {
+    padding-top: 0;
+}
+
 .person-details {
     display: flex;
     gap: 1rem;
@@ -303,7 +311,7 @@ select:focus>option:hover {
     height: 7.8rem;
     display: flex;
     align-items: center;
-    padding: 0;
+    padding-left: 2rem !important;
 
 }
 
@@ -343,7 +351,6 @@ select:focus>option:hover {
 .ec-header,
 .ec-times,
 .ec-time,
-.ec-sidebar-title,
 .ec-resource,
 .ec-day-head,
 .ec-days {
@@ -378,7 +385,6 @@ select:focus>option:hover {
 .ec-resource>span>.person-details {
     width: 249px !important;
     height: 8rem !important;
-    padding: 0 !important;
     margin: 0 !important;
     flex-basis: 0 !important;
 }
@@ -442,7 +448,7 @@ select:focus>option:hover {
 
 .ec-timeline .ec-sidebar .ec-resource {
     border-right: 3px dashed var(--border-color) !important;
-    border-top: 3px solid var(--border-color) !important;
+    border-bottom: 3px solid var(--border-color) !important;
 }
 
 /**** Fix For Last Child Resources ****/
@@ -469,6 +475,7 @@ select:focus>option:hover {
 
 .ec-header .ec-days {
     position: relative;
+    border-bottom: 3px solid var(--border-color) !important;
 }
 
 .ec-header .ec-days .ec-day:not(:first-child)::after {
@@ -488,7 +495,7 @@ select:focus>option:hover {
 
 /***** Horizontal Sepration Line in canvas *****/
 .ec-body .ec-days {
-    border-top: 3px dashed var(--border-color) !important;
+    border-bottom: 3px dashed var(--border-color) !important;
 }
 
 
